prevent short-heading from wrapping

--- a/packages/calcite-components/src/components/combobox-item/combobox-item.scss
+++ b/packages/calcite-components/src/components/combobox-item/combobox-item.scss
@@ -161,6 +161,7 @@ ul:focus {
 
 .short-text {
   color: var(--calcite-color-text-3);
+  white-space: nowrap;
 }
 
 .title,
